--- a/public/views/views.html
+++ b/public/views/views.html
@@ -8,19 +8,17 @@
     <!-- ng-class with current state name give you the ability to extended customization your view -->
     <div id="page-wrapper" class="gray-bg {{$state.current.name}}">
         <div class="row wrapper border-bottom white-bg page-heading p-sm">
-            <div class="col-sm-12">
-                <div class="col-md-4">
-                    <span class="lead m-r-sm m-b-none">View</span>
-                </div>
-
-                <div class="col-md-4 nav-docids">
-                    <button class="btn btn-default" ng-disabled="prevViewDisabled" ng-click="prevDoc()">&#8249; Previous Document</button>
-                    <button class="btn btn-default" ng-disabled="nextViewDisabled" ng-click="nextDoc()">Next Document &#8250;</button>
-                </div>
-
-
-
+            <div class="navbar-header">
+                <span class="lead m-r-lg m-b-none">View</span>
             </div>
+            <ul class="nav navbar-top-links text-center">
+                <li>
+                    <button class="btn btn-default" ng-disabled="prevViewDisabled" ng-click="prevDoc()">&#8249; Previous Document</button>
+                </li>
+                <li>
+                    <button class="btn btn-default" ng-disabled="nextViewDisabled" ng-click="nextDoc()">Next Document &#8250;</button>
+                </li>
+            </ul>
         </div>
         <div class="wrapper wrapper-content animated fadeInRight">
             <div class="row">
